--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Restaurant</string>
     <string name="slogan">Slogan</string>
 
-    <string name="register">Register</string>
+    <string name="register">Sign Up</string>
     <string name="login">Login</string>
     <string name="login_admin">Login Admin</string>
     <string name="anonymous_access">Anonymous access</string>
@@ -23,9 +23,43 @@
     <string name="email">Email</string>
     <string name="location">Location</string>
     <string name="date">Date</string>
+    <string name="update">Update</string>
+    <string name="update_account">Account has been updated</string>
+    <string name="update_account_info">Account has been updated: info</string>
+    <string name="old_password">Insert your old password</string>
+    <string name="new_password">Insert the new password</string>
+    <string name="repeat_password">Repeat the new password</string>
+    <string name="password_not_match">Passwords don\'t match </string>
+    <string name="password_same">Your new password cannot be same as old password</string>
+    <string name="save">Save</string>
+    <string name="error_old_pass">Old password is wrong</string>
+
+
+    <string name="back">Back</string>
+    <string name="change_password">Change Password</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_basic">BasicActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+
+    <!-- Menu-->
+    <string name="title_activity_account">Account</string>
+    <string name="title_activity__password">Activity_Password</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
+
 
 </resources>
