--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,11 @@
     <string name="email_exist">This mail already exist</string>
     <string name="password_weak">Password weak</string>
     <string name="register_wait">Registering Please Wait...</string>
+    <string name="login_wait">Sign in Please Wait...</string>
+
+    <string name="no_user">There isn\'t a user with this email</string>
+    <string name="no_admin">The user is not an Admin</string>
+    <string name="login_error_pass">Password error</string>
 
 
     <string name="back">Back</string>
