--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="login_admin">Login Admin</string>
     <string name="anonymous_access">Anonymous access</string>
     <string name="admin_access">Admin access</string>
-    <string name="username">Username</string>
-    <string name="password">Password</string>
+    <string name="username" translatable="false">Username</string>
+    <string name="password" translatable="false">Password</string>
     <string name="cancel">Cancel</string>
     <string name="forget_password">Forget password?</string>
     <string name="user_mandatory">Insert a Username</string>
@@ -44,13 +44,18 @@
     <string name="no_user">There isn\'t a user with this email</string>
     <string name="user_collision">This email already exist</string>
     <string name="no_admin">The user is not an Admin</string>
+    <string name="is_admin">The user is an Admin</string>
     <string name="login_error_pass">Password incorrect</string>
+    <string name="login_error_email">The email address is badly formatted</string>
+    <string name="login_error">Invalid credential</string>
     <string name="authentication_failed">Authentication failed</string>
 
 
     <string name="back">Back</string>
     <string name="change_password">Change Password</string>
     <string name="change_email">Change Email</string>
+
+    <string name="login_admin_title">Login - Admin</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
