--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,11 @@
     <string name="login_admin_title">Login - Admin</string>
 
 
+
+    <!-- Menu laterale-->
+    <string name="dashboard">Dashboard</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_basic">BasicActivity</string>
