--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="confirm_delete">Confirm delete?</string>
     <string name="confirm_notification_delete">The notification will be deleted</string>
     <string name="delete">Delete</string>
+    <string name="new_restaurant">New Restaurant</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
