--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,9 +93,15 @@
     <string name="restuarant_address">Restaurant address</string>
     <string name="restuarant_city">Restaurant city</string>
     <string name="restuarant_phone">Restaurant phone</string>
+    <string name="restuarant_tags">Restaurant tags</string>
     <string name="restuarant_category">Restaurant category</string>
     <string name="loading_categories">Loading categories ...</string>
     <string name="create">Create</string>
+    <string name="description_mandatory">Insert a description</string>
+    <string name="mail_mandatory">Insert a mail</string>
+    <string name="address_mandatory">Insert an address</string>
+    <string name="phone_mandatory">Insert a phone number</string>
+    <string name="phone_not_digits_only">Insert a real phone number</string>
 
 
 
@@ -105,6 +111,7 @@
     <string name="confirm_notification_delete">The notification will be deleted</string>
     <string name="delete">Delete</string>
     <string name="new_restaurant">New Restaurant</string>
+    <string name="new_restaurant_content">A new restaurant has been added in your city</string>
     <string name="new_favourite">New Favourite</string>
 
     <!-- TODO: Remove or change this placeholder text -->
