search con stato notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name="new_favourite">New Favourite</string>
     <string name="favourites">Favourites</string>
     <string name="profile">Profile</string>
+    <string name="no_element">No result found</string>
 
 
     <!-- Review -->
