--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,10 @@
     <string name="experience_mandatory">experience_mandatory</string>
 
 
+    <!-- Filter -->
+    <string name="Filter">Filters</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_basic">BasicActivity</string>
