--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -1,15 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Restaurant</string>
-    <string name="slogan">Slogan italiano</string>
+    <string name="slogan">Good time, Great taste.</string>
     <string name="register">Registrati</string>
     <string name="login">Accedi</string>
     <string name="login_admin">Accesso amministratore</string>
     <string name="anonymous_access">Accesso anonimo</string>
     <string name="admin_access">Accesso amministratore</string>
-    <string name="cancel">Annulla</string>
     <string name="login_wait">Acesso, attendi...</string>
     <string name="no_admin">L\'utente non è un\'amministratore</string>
     <string name="is_admin">L\'utente è un\'amministratore</string>
+    <string name="press_back_again_to_exit">Premere di nuovo indietro per uscire</string>
+    <string name="registered">Registrato</string>
+    <string name="login_admin_title">Login - Amministratore</string>
+    <string name="no_user">Non c\'è un utente con questa email</string>
+    <string name="login_error_email">L\'indirizzo e-mail è formattato male</string>
+    <string name="login_error_pass">Password errata</string>
+    <string name="login_error">Credenziali non valide</string>
+    <string name="mail_mandatory">Inserisci una mail</string>
+    <string name="password_mandatory">Inserisci una password</string>
+    <string name="birthday">Data di nascita</string>
+    <string name="email">Email</string>
+    <string name="change_password">Cambia password</string>
+    <string name="name">Nome</string>
+    <string name="name_mandatory">Inserisci un Nome</string>
+    <string name="new_favourite">Nuovo Preferito</string>
+    <string name="new_password">Inserisci una nuova password</string>
+    <string name="next">Prossimo</string>
+    <string name="no_element">Nessun risultato</string>
+    <string name="notification_title">Notifica</string>
+    <string name="old_password">Inserisci la tua vecchia password</string>
+    <string name="password_has_been_successfully_updated">"La password è stata aggiornata "</string>
+    <string name="password_not_match">Le password non corrispondono</string>
+    <string name="password_not_saved">La password non è stata salvata</string>
+    <string name="password_same">La nuova password non può essere uguale a quella precedente</string>
+    <string name="password_saved">Password salvata</string>
+    <string name="password_weak">Password debole</string>
+    <string name="phone_mandatory">Inserisci un numero di telefono</string>
+    <string name="phone_not_digits_only">Inserisci un numero di telefono reale</string>
+    <string name="previous">Precedente</string>
+    <string name="profile">Profilo</string>
+    <string name="register_wait">Registrazione aspetta...</string>
+    <string name="repeat_password">Ripeti la nuova password</string>
+    <string name="restaurant">Ristoranti</string>
+    <string name="restuarant_address">Indirizzo del ristorante</string>
+    <string name="restuarant_category">Categoria del ristorante</string>
+    <string name="restuarant_city">Città</string>
+    <string name="restuarant_description">Descrizione</string>
+    <string name="restuarant_email">Email del ristorante</string>
+    <string name="restuarant_name">Nome del ristorante</string>
+    <string name="restuarant_phone">Numero di telefono</string>
+    <string name="retrieving_account_wait">Recupero dei dati, attendere prego</string>
+    <string name="retrieving_restaurant_wait">Recupero dei dati, attendere prego</string>
+    <string name="save">Salva</string>
+    <string name="saving_wait">Salvataggio, attendere prego</string>
+    <string name="surname">Cognome</string>
+    <string name="surname_mandatory">Inserisci il cognome</string>
+    <string name="update">Aggiorna</string>
+    <string name="update_account">Il profilo è stato aggiornato</string>
+    <string name="updating_account_wait">Aggiornamento, attendere prego.</string>
+    <string name="uploading_image">Caricamento immagine...</string>
+    <string name="user_collision">L\'email esiste già</string>
+    <string name="user_mandatory">Inserisci un username</string>
+    <string name="wrong_credentials">Credenziali sbagliate</string>
+    <string name="new_restaurant">Nuovo Ristorante</string>
+    <string name="new_restaurant_content">Un nuovo ristorante ha aperto nella tua città</string>
+    <string name="location_mandatory">Inserisci un indirizzo</string>
+    <string name="location">Indirizzo</string>
+    <string name="loading_cities">Caricamento città...</string>
+    <string name="loading_categories">Caricamento categorie...</string>
+    <string name="insert_service">Servizio</string>
+    <string name="insert_problems">Problemi</string>
+    <string name="insert_location">Ambiente</string>
+    <string name="insert_experience">La tua esperienza</string>
+    <string name="Filter">Filtri</string>
+    <string name="favourites">Preferiti</string>
+    <string name="experience_mandatory">La tua esperienza è obbligatoria</string>
+    <string name="error_old_pass">La vecchia password è sbagliata</string>
+    <string name="email_mandatory">Inserisci una mail</string>
+    <string name="email_exist">Questa mail esiste già</string>
+    <string name="email_error">Inserisci una mail reale</string>
+    <string name="edit_restaurant">Modifica il ristorante</string>
+    <string name="description_mandatory">Inserisci una descrizione</string>
+    <string name="delete">Cancella</string>
+    <string name="date">Data</string>
+    <string name="data_has_been_successfully_updated">I dati sono stati aggiornati correttamente</string>
+    <string name="creating_account">Creazione account</string>
+    <string name="create_review">Crea recensione</string>
+    <string name="create">Crea</string>
+    <string name="confirm_notification_delete">La notifica sarà cancellata</string>
+    <string name="confirm_delete">Confermare la cancellazione?</string>
+    <string name="change_email">Cambia mail</string>
+    <string name="cancel">Annulla</string>
+    <string name="back">Indietro</string>
+    <string name="authentication_failed">Errore di autenticazione</string>
+    <string name="add_new_restaurant">Aggiungi un nuovo ristorante</string>
+    <string name="add_image">Aggiungi una nuova immagine</string>
+    <string name="account_surname">Cognome:</string>
+    <string name="account_name">Nome:</string>
+    <string name="account_mail">Mail:</string>
+    <string name="account_location">Indirizzo:</string>
+    <string name="account_information">Informazioni</string>
+    <string name="account_edit">Modifica dati</string>
+    <string name="account_date">Data:</string>
 
 </resources>
