--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -112,5 +112,13 @@
     <string name="new_favourite_description">Qualcuno ha aggiunto ai preferiti il tuo ristorante</string>
     <string name="new_review">Nuova Recensione</string>
     <string name="new_review_description">Qualcuno ha aggiunto una nuova recensione a:</string>
+    <string name="login_first">Devi effettuare il login</string>
+    <string name="add_favorite">Aggiunto ai preferiti</string>
+    <string name="remove_favorite">Rimosso dai preferiti</string>
+    <string name="add_tag">Tag aggiunto</string>
+    <string name="remove_tag">Tag rimosso</string>
+    <string name="load_more">Carica di più...</string>
+    <string name="load_less">Carica di meno...</string>
+    <string name="experience">Esperienza</string>
 
 </resources>
