--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,6 @@
     <string name="location">Location</string>
     <string name="load_more">Load more ...</string>
     <string name="load_less">Load less ...</string>
-    <string name="days_of_the_week">Days of opening</string>
     <string name="date">Date</string>
     <string name="update">Update</string>
     <string name="update_account">Account has been updated</string>
@@ -176,6 +175,8 @@
     <string name="venerdì">F</string>
     <string name="sabato">S</string>
     <string name="domenica">S</string>
+
+    <string name="select_time">Select time</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
