Sistemato tutto per orari

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,8 +175,10 @@
     <string name="venerdì">F</string>
     <string name="sabato">S</string>
     <string name="domenica">S</string>
+    <string name="closed">Closed</string>
 
     <string name="select_time">Select time</string>
+    <string name="edit_times">Update restaurant hours</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
