--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,6 +185,8 @@
     <string name="times_saved">Saved</string>
     <string name="restaurant_data_saved">Saved</string>
 
+    <string name="restaurant_created">Restaurant created</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
